# SturdyWebServer

./: .gitignore  Cargo.toml  README.md  build.rs  config.json
src/: appstate.rs  configuration.rs  macros.rs  main.rs  webserver.rs
src/html_src/: index.html  index.js  stylesheet.css
