[package]
name = "tidewebserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.1"
crossterm = "0.27.0"
lazy-regex = { version = "3.0.2", features = ["regex", "std"] }
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.107", features = ["float_roundtrip"] }
tide = "0.16.0"
tide-websockets = "0.4.0"
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
fs_extra = "1.3.0"
